[project]
name = "pyramid_fullauth"
version = "1.0.1"
description = "pyramid_fullauth provides full authentication / authorisation implementation for pyramid applications"
readme = "README.rst"
keywords = ["pyramid", "authentication", "authorisation", "user"]
license = {file = "LICENSE"}
authors = [
    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Pyramid",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyramid >= 1.10",
    "pyramid_basemodel >= 0.3",
    "pyramid_mako",
    "pyramid_localize",
    # secured against CVE-2019-7164, CVE-2019-7548
    "SQLAlchemy >= 1.3.0",
    "velruse >= 1.1.1",
]
requires-python = ">= 3.8"

[project.urls]
"Source" = "https://github.com/fizyk/pyramid_fullauth/"
"Bug Tracker" = "https://github.com/fizyk/pyramid_fullauth/issues"
"Changelog" = "https://github.com/fizyk/pyramid_fullauth/blob/v1.0.1/CHANGES.rst"

[project.optional-dependencies]
docs = ["sphinx"]

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["pyramid_fullauth*"]
exclude = ["tests*"]
namespaces = false

[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://https://github.com/fizyk/pyramid_fullauth/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.break]
name = "Breaking changes"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Miscellaneus"
showcontent = true

[tool.pytest.ini_options]
xfail_strict=true
postgresql_port=5433
mysql_port=3307
mysql_dbname="tests"

[tool.pydocstyle]
ignore = "D203,D212"

[tool.black]
line-length = 120
target-version = ['py38']
include = '.*\.pyi?$'
