[metadata]
name = pyramid_fullauth
version = 1.0.1
url = http://github.com/fizyk/pyramid_fullauth
description = pyramid_fullauth provides full authentication / authorisation implementation for pyramid applications
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = pyramid, authentication, authorisation, user
license = MIT License
author = Grzegorz Śliwiński
author_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Pyramid
    Topic :: Database :: Front-Ends
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:
install_requires =
    pyramid >= 1.10
    pyramid_basemodel >= 0.3
    pyramid_mako
    pyramid_localize
    # secured against CVE-2019-7164, CVE-2019-7548
    SQLAlchemy >= 1.3.0
    velruse >= 1.1.1

[options.extras_require]
tests =
    mock
    pytest
    pytest-pyramid
    psycopg2-binary; platform_python_implementation != "PyPy"
    psycopg2cffi; platform_python_implementation == "PyPy"
    pytest-cov
    pytest-mysql
    pytest-postgresql
docs =
    sphinx

[extract_messages]
add_comments = TRANSLATORS:
mapping_file = mapping.cfg
output_file = pyramid_fullauth/resources/locale/pyramid_fullauth.pot
width = 80

[pycodestyle]
max-line-length = 120
exclude = docs/*,build/*,venv/*

[pydocstyle]
ignore = D203,D212
match = '(?!docs|build|venv).*\.py'
